Closed Bug 191215 Opened 23 years ago Closed 23 years ago

Graphic in attachment(.jpg) fails to display on double click -bld 2003011509 does

Categories

(MailNews Core :: Attachments, defect)

x86
All
defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.3final

People

(Reporter: mike.hitchcock, Assigned: janv)

References

Details

(Keywords: regression, Whiteboard: fixed1.3)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.3b) Gecko/20030129 Build Identifier: Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.3b) Gecko/20030129 Mail downloaded contained attachement of 3 jpg images. If double click on attachment. moz swaps to browser screen and attempts to load(progress bar starts to extend) but no image displays. Previous build 2003011509 does display same images. This build is identical as to plugins/helper applications Reproducible: Always Steps to Reproduce: 1.send mail to test build contaaining jpg images. 2.download mail on test build 3.double click lmb on image file in attachment box Actual Results: Warpzilla switched to browser screen but failed to display image Expected Results: Dispay image on browser screen none
************************************************************ * Call to xpconnect wrapped JSObject produced this error: * [Exception... "Component does not have requested interface arg 3 [nsIURIContentL istener.doContent]" nsresult: "0x80004002 (NS_NOINTERFACE)" location: "JS fram e :: chrome://navigator/content/nsBrowserContentListener.js :: anonymous :: line 127" data: no] ************************************************************ Document mailbox:///C|/Dokumente%20und%20Einstellungen/Matti/Anwendungsdaten/Moz illa/Profiles/Matti2/gnj7ycwv.slt/Mail/pop.epost.de/Mozilla.sbd/Mails?number=131 6109&part=1.3&type=image/jpeg&filename=Fehlermeldung%20aktuelles%20Profil.jpg lo aded successfully i saw this yesterday but forgot to file a bug. confirming using win2k build 20030128.. , this is a major regression !
Severity: normal → major
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: blocking1.3b?
Keywords: regression
OS: other → All
in addition, at least on linux, nothing happens if you select "Open" in the attachments context menu.
Seth, can you take a look at this for 1.3?
Assignee: mscott → sspitzer
additional info: you get the binary source of the image if you hit ctrl+U in the empty brwoser window
After i double-click a jpg attachment i can no longer scroll in the browser window (wheelscrolling and scrollbar widget are dead)
accepting. I'll investigate.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.3beta
I'm not seeing this with my debug build from today. I'll go back in time and download the win2k build Matti said he saw it with. (20030128) I think the exception noted in comment #1 is a wild goose, and not related. (I've see than even when the image loads ok.) does it have to be a large attachment to have this problem? this might have been fixed by darin, I'll ping him.
It's still broken for me in an 8h old build. I update my build in this moment..
This still doesn't work in my 5min old CVS optimized build on windows 2000 with Pop3. a) open Browser with default homepage b) open Mailnews, select a pop3 message with an jpeg attachment c) double click on that attachment. d) URL in the browser window changes to mailbox://... but the browser window still displays the default homepage in the content area View source shows the image binary and Page info displays a broken Image Icon under the media Tab
matti, can you select the message, and do "ctrl+e" (edit as new) and send it to me?
ok, I can reproduce this. some comments in addition to Matti's: 1) if the browser is open and I do this, the browser points to the message part, and page info on the browser shows the right thing, and the url bar is right, but the page still shows what was there before. 2) if I do this without a browser window open, it works. (this is why I think I wasn't seeing it earlier) 3) I see this with imap and mailbox (pop3 / local) messages 4) the js error might be related, I'm not sure yet. here are some of the assertions / errors on my console: ###!!! ASSERTION: OnDataAvailable implementation consumed no data: 'Error', file c:/trees/trunk/mozilla/netwerk/base/src/nsInputStreamPump.cpp, line 420 ###!!! ASSERTION: Cache entry without a caching channel!: 'cacheChan', file c:/t rees/trunk/mozilla/modules/libpr0n/src/imgLoader.cpp, line 553 Error loading URL mailbox:///C|/Documents%20and%20Settings/Administrator/Applica tion%20Data/Mozilla/Profiles/default/eou9vmeh.slt/Mail/Local%20Folders/bug?number=11117&part=1.3&type=image/gif&filename=Asp1.gif : 804b0002
this is all i see on the console (repeating same steps as seth described w/ an pop3 account and an email w/ a JPG image attachment): ************************************************************ * Call to xpconnect wrapped JSObject produced this error: * [Exception... "Component does not have requested interface arg 3 [nsIURIContentListener.doContent]" nsresult: "0x80004002 (NS_NOINTERFACE)" location: "JS frame :: chrome://navigator/content/nsBrowserContentListener.js :: anonymous :: line 127" data: no] ************************************************************ Document mailbox:///home/darinf/.mozilla/test/h3cciswh.slt/Mail/unagi.nscp.aoltw.net/Inbox?number=2147&part=1.2&type=image/jpeg&filename=flyeur4_1024.jpg loaded successfully
I'll start with the js error. to see the other errors, try hitting the reload button in the browser window after the image attachment fails to load.
darren, any ideas why this would work if the browser wasn't open, but fails when it is?
seth: i really don't have any idea how the presence of the browser window would matter... maybe jag or bryner have some ideas.
moving blocking request out to final. We're done with beta. Seth said he'd look into this for final.
Flags: blocking1.3b? → blocking1.3?
Flags: blocking1.3? → blocking1.3+
*** Bug 193043 has been marked as a duplicate of this bug. ***
i notice the same happens with .gif images. And as reporter of bug 193043 noticed, hitting "enter" in the url-bar cause the image to load. This has some weird resemblance with bug 190044, where all statusbar refreshes are "one step behind" - they lack that extra push to set them right.
quite a few mail bugs are blocking 1.3 final
Target Milestone: mozilla1.3beta → mozilla1.3final
*** Bug 193274 has been marked as a duplicate of this bug. ***
*** Bug 193331 has been marked as a duplicate of this bug. ***
this regressed between linux trunk builds 2003011705 and 2003011805
this regression is due to bug 73322
Attached patch fixSplinter Review
Hmm, the stream listener was not called in this case. I changed it back to a stanalone object and it works now. Sigh.
-> me
Assignee: sspitzer → varga
Status: ASSIGNED → NEW
Attachment #114659 - Flags: superreview?(sspitzer)
Attachment #114659 - Flags: review?(jaggernaut)
Comment on attachment 114659 [details] [diff] [review] fix sr=sspitzer jan is just adding back code that was removed.
Attachment #114659 - Flags: superreview?(sspitzer)
Attachment #114659 - Flags: superreview+
Attachment #114659 - Flags: approval1.3?
big thanks to Andrew Schultz (ajschult@eos.ncsu.edu) for spotting what caused the regression.
Comment on attachment 114659 [details] [diff] [review] fix Hmm... Does this work because ImageListener claims to be threadsafe while nsImageDocument doesn't? r=jag
Attachment #114659 - Flags: review?(jaggernaut) → review+
>Hmm... Does this work because ImageListener claims to be threadsafe while >nsImageDocument doesn't? That was first thing I checked, but it works correctly even with non-threadsafe ImageListener. I took look at other document implementations and it seems like a good idea to keep the listener separately.
Ok, I figured out what's happening. nsBrowserContentListener.js contains method DoContent() This method is called when there is already a browser window opened. This method passes |contentHandler| which is actually nsImageDocument to contentListener.doContent() as nsIStreamListener interface. But nsIStreamListener interface is not exposed via nsDOMClassInfo, so it's not accessible from JS and that's the problem. So we could fix it by exposing nsIStreamListener via nsDOMClassInfo. I don't think it's a good idea. Jag and I decided to go with my original patch.
checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
*** Bug 194054 has been marked as a duplicate of this bug. ***
*** Bug 194318 has been marked as a duplicate of this bug. ***
Um... it doesn't matter whether the inteface is exposed via classinfo as long as people QI to it. If they don't QI, how are they expecting it to work anyway? Sounds like the caller of doContent or doContent itself is just broken here....
*** Bug 195040 has been marked as a duplicate of this bug. ***
Whiteboard: landed1.3
Whiteboard: landed1.3 → fixed1.3
*** Bug 195698 has been marked as a duplicate of this bug. ***
*** Bug 196347 has been marked as a duplicate of this bug. ***
Trunk build 2003-05-22: Mac 10.1.5, WinMe Verified Fixed.
Status: RESOLVED → VERIFIED
QA Contact: stephend → nbaca
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: