Fix for bug 191215. Graphic in attachment(.jpg) fails to display on double click -bld 2003011509 does. r=jag sr=sspitzer a=dbaron